# kulfi

./: .gitmodules  CMakeLists.txt  README.md
src/main/: main.cpp
src/main/constants/: GeneralConstants.hpp  StatusConstants.hpp
src/main/models/: Status.hpp
src/main/utils/: FileSystemUtils.hpp  Log.hpp  StringUtils.hpp
